infra/security_gp.tf
# Traffic firewall rules
resource "aws_security_group" "obinna_sg" {
  name   = "obinna_sg"
  vpc_id = aws_vpc.obinna_dev_vpc.id

  tags = {
    Name = "obinna_sg_firewall_rules"
  }

  # allows ssh connections to the Redshift from external client
  ingress {
    from_port   = 5439
    to_port     = 5439
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # allows inbound https connections 
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # allows inbound https connections 
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allows Redshift connection from RDS
  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allows all outbound connections
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
